--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,22 @@
     },
     "content_scripts": [
         {
-            "matches":  ["http://*/*", "https://*/*"],
-            "js": ["script.js"]
+            "matches": [
+                "http://*/*",
+                "https://*/*"
+            ],
+            "js": [
+                "script.js"
+            ]
         }
-    ]
+    ],
+    "commands": {
+        "run": {
+            "suggested_key": {
+                "default": "Ctrl+I",
+                "mac": "Command+I"
+            },
+            "description": "Translate from english to arabic."
+        }
+    }
 }
